Fix Ubuntu resize gap in floating panels

--- a/src/main/resources/org/dockfx/default.css
+++ b/src/main/resources/org/dockfx/default.css
@@ -110,8 +110,8 @@
  ******************************************************************************/
 
 .dock-node-border {
-  -fx-padding: 10;
-  -fx-background-color: transparent;
+  -fx-padding: 5;
+  -fx-background-color: LightGray;
   -fx-effect: dropshadow( three-pass-box, rgba(0,0,0,0.4), 10,0.2,0,0 );
 }
 
